crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__bool_op__missing_rhs.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/bool_op/missing_rhs.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..12,
        body: Suite {
            range: 0..12,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 0..5,
                        value: BoolOp(
                            ExprBoolOp {
                                node_index: NodeIndex(None),
                                range: 0..5,
                                op: And,
                                values: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 0..1,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 5..5,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                ],
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 7..12,
                        value: BinOp(
                            ExprBinOp {
                                node_index: NodeIndex(None),
                                range: 7..12,
                                left: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 7..8,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                op: Add,
                                right: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 11..12,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | x and
  |      ^ Syntax Error: Expected an expression
2 |
3 | 1 + 2
  |
